--- a/01-23.md
+++ b/01-23.md
@@ -1,6 +1,4 @@
-# Class Notes
-
-## Lab Info
+# Lab Info
 * All groups get 3 time slots per week
 * Each group gets assigned one subnet
   * includes 3 computers and 1 router
@@ -12,11 +10,42 @@
 * see professor's **8 steps to troubleshoot network problems** to fix issues
   * do these steps before asking for help
 
-## Project 1
+# Project 1
 * Due in 4 weeks (Feb 20)
 * task 1 involves starting services (httpd, sshd)
   * `service httpd status`
   * `service httpd start`
   * `service httpd stop`
 * will use tools **Wireshark** and **NMap**
-* 
+
+## Written Report:
+* Should split sections to write among the group
+* going over the 15 page limit will lose points
+* if someone didn't do anything, don't mention them in summary
+* screenshots should be included in report
+  * make sure images match the text/caption
+  * conflicting images/info will lose points
+
+## Grading
+* if you don't contribute to group - you get zero
+* 70 group points
+  * intro - 10 pts
+  * other sections - 20 pts each
+* 30 solo points
+  * 15 for doing tasks
+  * 15 for doing report
+  * (doing report only gets a zero)
+
+# Networking Basics
+* use wireshark to capture packets
+  * open up on the attacking computer
+  * will show packets being transferred by client
+  * use filters to show only desired info
+    * `http` to see web traffic
+* firewall sets rules based on ports, not service names
+* **TCP** packets have header + payload
+* **IP** packets have header + payload
+  * payload contains complete **TCP** packets
+  * header contains source+dest IP address
+  * IPv4 address contain 4 bytes, each from (0-255)
+  * port number must be smaller than 65535 (2 bytes)
