updated class notes

--- a/03-22.md
+++ b/03-22.md
@@ -72,8 +72,13 @@
 * Transition: no inheritage in newly created subjects
 
 ### Sandboxing
-* providing an enclossed environment that doesn't have any connection to secure environment
+* providing an enclosed environment that doesn't have any connection to secure environment
   * Virtual Machines are a really good implementation of a sandbox
 
 ### Randomization
-* 
+* when you execute a program, a randomly-sized block of junk data is inserted at the bottom of the stack
+  * assume it can be from 0 to 2<sup>24</sup> Bytes
+* attacker won't know the size of this block of memory
+  * chance they can guess return address is 1 / 2<sup>24</sup>
+  * using nops will help them hit the address
+    * their chances become (size of nops) / 2<sup>24</sup>
